--- a/rpi-alpine-jenkins/docker-compose.yml
+++ b/rpi-alpine-jenkins/docker-compose.yml
@@ -18,12 +18,13 @@ services:
             - "8080:8080"
         volumes:
             - /etc/localtime:/etc/localtime:ro
-            #- /host/data:/home/jenkins         # volume for data
+            #- /var/run/docker.sock:/var/run/docker.sock
+            #- /host/data:/home/jenkins                     # volume for data
         environment:
-            - CONSUL_AGENT=consul               # consul agent hostname/IP
-            #- CONSUL_PORT=8500                 # consul agent port
-            #- CONSUL_KEYPREFIX=path/prefix/    # consul key prefix path
-            - CONSUL_SERVICENAME=jenkins        # consul service name
-            - CONSUL_SERVICETAGS=dev            # consul service tag
-            - CONSUL_SERVICEPORT=8080           # consul service port
-            - CONSUL_CHECKTYPE=tcp              # consul health check type
+            - CONSUL_AGENT=consul                           # consul agent hostname/IP
+            #- CONSUL_PORT=8500                             # consul agent port
+            #- CONSUL_KEYPREFIX=path/prefix/                # consul key prefix path
+            - CONSUL_SERVICENAME=jenkins                    # consul service name
+            - CONSUL_SERVICETAGS=dev                        # consul service tag
+            - CONSUL_SERVICEPORT=8080                       # consul service port
+            - CONSUL_CHECKTYPE=tcp                          # consul health check type
