--- a/rpi-alpine-base-consul/docker-compose.skeleton.yml
+++ b/rpi-alpine-base-consul/docker-compose.skeleton.yml
@@ -18,17 +18,19 @@ services:
             #- CONSUL_TLSKEYFILE=                                         # TLS client certificate key file (client)
             #- CONSUL_TLSSERVERNAME=                                      # SNI server name for validation
             #- CONSUL_TLSVERIFY=0                                         # enable TLS peer verification
-            #- CONSUL_TOKEN=43480d61-aea9-4a21-9deb-5e68dbc44985          # API token
-            #- CONSUL_KEYPREFIX=path/prefix/                              # keystore prefix path
-            #- CONSUL_RESOLVER=container                                  # IP resolver method for consul service registration (container/route/interface, by default container)
+            #- CONSUL_TOKEN=                                              # API token
+            #- CONSUL_KEYPREFIX=                                          # keystore prefix path
+            - CONSUL_SERVICENAME=foo                                      # service name to register
+            - CONSUL_SERVICETAGS=dev                                      # service tags (optional)
+            - CONSUL_SERVICEPORT=1234                                     # service port
+            - CONSUL_CHECKTYPE=tcp                                        # health check type (none/http/script/tcp/ttl, default: none)
+            - CONSUL_CHECKINTERVAL=15s                                    # health check interval
+            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=                     # delay after which the service will be deregistered if this check remains critical (0 to disable)
+            #- CONSUL_RESOLVER=container                                  # IP resolver method for consul service (container/route/interface, by default container)
             #- CONSUL_RESOLVER_INTERFACENAME=eth0                         # network interface name for IP resolver (default: eth0)
             #- CONSUL_RESOLVER_INTERFACETYPE=inet                         # network interface type for IP resolver (inet/inet6, default: inet)
-            - CONSUL_SERVICENAME=foo                                      # service name to register
-            #- CONSUL_SERVICETAGS=local,foo                               # service tags (optional)
-            - CONSUL_SERVICEPORT=1234                                     # service port
-            #- CONSUL_CHECKTYPE=tcp                                       # health check type (none/http/script/tcp/ttl, default: none)
-            #- CONSUL_CHECKINTERVAL=15s                                   # health check interval
-            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=0                    # delay after which the service will be deregistered if this check remains critical (0 to disable)
+            #- CONSUL_WAITFOR_SERVICENAME=                                # consul service name to wait for starting
+            #- CONSUL_WAITFOR_SERVICETAG=                                 # consul service tag to wait for starting
 
             #
             # HTTP health check
@@ -38,7 +40,7 @@ services:
             #- CONSUL_CHECKHTTPPATH=/                                     # HTTP path for auto-generated URL (http://<container_ip>:<service_port><path>)
             #- CONSUL_CHECKHTTPTLSSKIPVERIFY=0                            # skip TLS certificate verification
             #- CONSUL_CHECKINTERVAL=15s                                   # check interval
-            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=0                    # delay after which the service will be deregistered if this check remains critical (0 to disable)
+            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=                     # delay after which the service will be deregistered if this check remains critical (0 to disable)
 
             #
             # Script health check
@@ -48,7 +50,7 @@ services:
             #- CONSUL_CHECKDOCKERCONTAINERID=                             # docker container id
             #- CONSUL_CHECKSHELL=/bin/bash                                # custom shell
             #- CONSUL_CHECKINTERVAL=15s                                   # check interval
-            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=0                    # delay after which the service will be deregistered if this check remains critical (0 to disable)
+            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=                     # delay after which the service will be deregistered if this check remains critical (0 to disable)
 
             #
             # TCP health check
@@ -57,11 +59,11 @@ services:
             #- CONSUL_CHECKADDR=static                                    # custom TCP address if different from service registration
             #- CONSUL_CHECKPORT=5678                                      # custom TCP port if different from service registration
             #- CONSUL_CHECKINTERVAL=15s                                   # check interval
-            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=0                    # delay after which the service will be deregistered if this check remains critical (0 to disable)
+            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=                     # delay after which the service will be deregistered if this check remains critical (0 to disable)
 
             #
             # TTL health check
             #
             #- CONSUL_CHECKTYPE=ttl
             #- CONSUL_CHECKTTL=15s                                        # TTL update
-            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=0                    # delay after which the service will be deregistered if this check remains critical (0 to disable)
+            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=                     # delay after which the service will be deregistered if this check remains critical (0 to disable)
