--- a/rpi-alpine-base/docker-compose.skeleton.yml
+++ b/rpi-alpine-base/docker-compose.skeleton.yml
@@ -1,10 +1,11 @@
-version: '3.2'
+version: '3.5'
 
 services:
     foo:
         volumes:
             - /etc/localtime:/etc/localtime:ro
         environment:
+            #- ENV=                                     # environment name
             #- CONTAINER_HOST=                          # container host (defaut: hostname of the container)
             #- CONTAINER_RESOLVER=route                 # IP resolver method for container (disable/route/interface, default: route)
             #- CONTAINER_RESOLVER_INTERFACENAME=eth0    # network interface name for IP resolver (default: eth0)
