--- a/rpi-alpine-kivy/docker-compose.yml
+++ b/rpi-alpine-kivy/docker-compose.yml
@@ -1,26 +1,17 @@
-version: '3.2'
+version: '3.5'
 
 services:
-    consul:
-        image: bhuisgen/rpi-alpine-consul
-        ports:
-            - "8500:8500"
-        volumes:
-            - /etc/localtime:/etc/localtime:ro
-        environment:
-            - CONSUL_OPTIONS=-server -bootstrap-expect 1 -client 0.0.0.0 -ui    # minimal server options
-
     kivy:
         depends_on:
-            - consul
+            - consul                                # consul agent
         image: bhuisgen/rpi-alpine-kivy
-        network_mode: host
         devices:
             - /dev/vchiq
             - /dev/input
         volumes:
             - /etc/localtime:/etc/localtime:ro
         environment:
-            - CONSUL_AGENT=consul                  # consul agent hostname/IP
-            #- CONSUL_PORT=8500                    # consul agent port
-            #- CONSUL_KEYPREFIX=path/prefix/       # consul key prefix path
+            - ENV=local                             # environment name
+            - CONSUL_AGENT=consul                   # consul agent hostname/IP
+            #- CONSUL_PORT=8500                     # consul agent port
+            #- CONSUL_KEYPREFIX=path/prefix/        # consul key prefix path
