--- a/rpi-alpine-rng/docker-compose.yml
+++ b/rpi-alpine-rng/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.2'
+version: '3.5'
 
 services:
     rng:
@@ -8,4 +8,4 @@ services:
         volumes:
             - /etc/localtime:/etc/localtime:ro
         environment:
-            - RNG_OPTIONS=--no-tpm=1
+            - RNG_OPTIONS=--no-tpm=1                # rng options
