--- a/rpi-alpine-base/Dockerfile
+++ b/rpi-alpine-base/Dockerfile
@@ -4,11 +4,7 @@ LABEL maintainer="Boris HUISGEN <bhuisgen@hbis.fr>"
 ARG BUILD_ARCH=x86_64
 
 ENV S6OVERLAY_VERSION=1.21.2.2 \
-    S6_BEHAVIOUR_IF_STAGE2_FAILS=1 \
-    LANG=en_US.UTF-8 \
-    LC_ALL=en_US.UTF-8 \
-    LANGUAGE=en_US.UTF-8 \
-    TERM=xterm
+    S6_BEHAVIOUR_IF_STAGE2_FAILS=1
 
 COPY packages/build/${BUILD_ARCH}/*.apk /root/
 RUN apk update && \
