--- a/rpi-alpine-rng/docker-compose.yml
+++ b/rpi-alpine-rng/docker-compose.yml
@@ -8,4 +8,5 @@ services:
         volumes:
             - /etc/localtime:/etc/localtime:ro
         environment:
+            - ENV=local                             # environment name
             - RNG_OPTIONS=--no-tpm=1                # rng options
