--- a/rpi-alpine-base-consul/docker-compose.skeleton.yml
+++ b/rpi-alpine-base-consul/docker-compose.skeleton.yml
@@ -26,8 +26,9 @@ services:
             - CONSUL_SERVICENAME=foo                    # service name to register
             - CONSUL_SERVICETAGS=local                  # service tags (optional)
             - CONSUL_SERVICEPORT=1234                   # service port
-            - CONSUL_CHECKTYPE=tcp                      # health check type (none/http/script/tcp/ttl, default: none)
+            - CONSUL_CHECKTYPE=tcp                      # health check type (none/http/script/tcp/ttl/grpc, default: none)
             - CONSUL_CHECKINTERVAL=15s                  # health check interval
+            #- CONSUL_CHECKNOTES=                       # health check notes (optional)
             #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=   # delay after which the service will be deregistered if this check remains critical (0 to disable)
             #- CONSUL_RESOLVER=container                # IP resolver method for consul service (container/route/interface, by default container)
             #- CONSUL_RESOLVER_INTERFACENAME=eth0       # network interface name for IP resolver (default: eth0)
@@ -60,10 +61,17 @@ services:
             #- CONSUL_CHECKPORT=5678                    # custom TCP port if different from service registration
             #- CONSUL_CHECKINTERVAL=15s                 # check interval
             #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=   # delay after which the service will be deregistered if this check remains critical (0 to disable)
-
             #
             # TTL health check
             #
             #- CONSUL_CHECKTYPE=ttl
             #- CONSUL_CHECKTTL=15s                      # TTL update
+            #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=   # delay after which the service will be deregistered if this check remains critical (0 to disable)
+            #
+            # GRPC health check
+            #
+            #- CONSUL_CHECKTYPE=grpc
+            #- CONSUL_CHECKGRPC=1.2.3.4:1234            # GRPC endpoint
+            #- CONSUL_CHECKGRPCUSETLS=0                 # Use TLS for GRPC
+            #- CONSUL_CHECKINTERVAL=15s                 # check interval
             #- CONSUL_DEREGISTERCRITICALSERVICEAFTER=   # delay after which the service will be deregistered if this check remains critical (0 to disable)
